<resources>
    <string name="app_name">Cinexplain</string>
    <string name="ultimos_lancamentos">Últimos Lançamentos</string>
    <string name="ver_sobre_o_filme">Ver sobre o Filme</string>
    <string name="sobre_avatar">Avatar é um filme épico de ficção científica estadunidense de 2009, escrito e dirigido por James Cameron, e estrelado por Sam Worthington, Zoë Saldaña, Michelle Rodriguez, Sigourney Weaver e Stephen Lang. O filme, que foi produzido pela Lightstorm Entertainment e distribuído pela 20th Century Fox, tem seu enredo localizado no ano 2154 e é baseado em um conflito em Pandora, uma das luas de Polifemo, um dos três planetas gasosos fictícios que orbitam o sistema Alpha Centauri</string>
    <string name="imagem_avatar">imagem_avatar</string>
    <string name="imagem_lancamento">imagem_lancamento</string>
    <string name="menu">menu</string>
    <string name="lupa">lupa</string>
    <string name="busca">procurar...</string>
    <string name="filme5">filme5</string>
    <string name="filme4">filme4</string>
    <string name="filme3">filme3</string>
    <string name="filme2">filme2</string>
    <string name="filme6">filme6</string>
    <string name="filme7">filme7</string>
    <string name="filme8">filme8</string>
    <string name="filme9">filme9</string>
    <string name="img_coracao">img_coracao</string>
    <string name="melhores_avaliacoes">Melhores Avaliações</string>
    <string name="caixa_informacao">caixa_informacao</string>
    <string name="text_main">Fique por dentro do mundo cinematográfico e se junte a nós!</string>
    <string name="bt_primeiro"><![CDATA[Entrar >]]></string>
    <string name="cinexplain">Cinexplain</string>
    <string name="logo_pipoca">logo_pipoca</string>
    <string name="mapa_cinema">Cinemas próximos de você</string>
    <string name="voltar_tela_principal"> Tela principal</string>
    <string name="icone_home">icone_home</string>
    <string name="img_linha">img_linha</string>
    <string name="sair">Sair</string>
    <string name="icone_mapa">icone_mapa</string>
    <string name="img_logo">img_logo</string>
    <string name="james_cameron">James Cameron</string>
    <string name="sam_worthington">Sam Worthington</string>
    <string name="roteiro">Roteiro:</string>
    <string name="elenco">Elenco:</string>
    <string name="producao">Produção:</string>
    <string name="orientacao_trailer">(clique na imagem para assistir o trailer)</string>
    <string name="sobre">Sobre:</string>
    <string name="txt_sobre_Avatar">No exuberante mundo alienígena de Pandora vivem os Na\'vi, seres que parecem ser primitivos, mas são altamente evoluídos. Como o ambiente do planeta é tóxico, foram criados os avatares, corpos biológicos controlados pela mente humana que se movimentam livremente em Pandora. Jake Sully, um ex-fuzileiro naval paralítico, volta a andar através de um avatar e se apaixona por uma Na\'vi. Esta paixão leva Jake a lutar pela sobrevivência de Pandora.</string>
    <string name="direcao">Direção:</string>
    <string name="jon_landau">Jon Landau</string>
    <string name="img_trailer_avatar">img_trailer_Avatar</string>
    <string name="favoritos">Favoritos</string>
    <string name="sigourney_weaver">Sigourney Weaver</string>
    <string name="stephen_lang">Stephen Lang</string>
    <string name="michelle_rodriguez">Michelle Rodriguez</string>
    <string name="giovanni_ribisi">Giovanni Ribisi</string>
    <string name="joel_david_moore">Joel David Moore</string>
    <string name="zo_salda_a">Zoë Saldaña</string>
    <string name="g_nero_pico_a_o_aventura_fic_o_cient_fica">Gênero: épico / ação / aventura / ficção científica</string>
    <string name="trailer2">trailer2</string>
    <string name="sobre_filme2">Ambientado em 1981, o filme segue os investigadores paranormais Ed (Patrick Wilson) e Lorraine Warren (Vera Farmiga) a primeira vez na história dos Estados Unidos que um suspeito de assassinato alega ter tido uma possessão demoníaca como defesa. Eles aparecem para ajudar David Glatzel (Julian Hilliard) e Arne Johnson (Ruairi O\'Connor). Depois de realizar um exorcismo assustador no jovem David, o demônio vai para até Arne, fazendo com que ele cometa um assassinato.</string>
    <string name="michael_chaves">Michael Chaves</string>
    <string name="peter_safran">Peter Safran</string>
    <string name="james_wan">James Wan</string>
    <string name="david_leslie_johnson">David Leslie Johnson</string>
    <string name="vera_farmiga">Vera Farmiga</string>
    <string name="patrick_wilson">Patrick Wilson</string>
    <string name="sterling_jerins">Sterling Jerins</string>
    <string name="julian_hilliard">Julian Hilliard</string>
    <string name="ruairi_o_connor">Ruairi O\'Connor</string>
    <string name="bonnie_aarons">Bonnie Aarons</string>
    <string name="genero_filme2">Gênero: terror / suspense / terror sobrenatural / mistério</string>
    <string name="txt_sobre_filme3">Antes do País das Maravilhas e da viagem à Terra do Nunca, os irmãos Peter (Jordan A. Nash) e Alice (Keira Chansa) deixaram a imaginação correr solta durante um verão repleto de brincadeiras com espadas, chás da tarde e navios piratas. Quando uma tragédia toma conta da família e muda completamente a vida de seus pais, Jack (David Oyelowo) e Rose (Angelina Jolie), Peter e Alice embarcam numa aventura fantástica e entendem que crescer pode não ser o maior dos seus problemas.</string>
    <string name="brenda_chapman">Brenda Chapman</string>
    <string name="david_oyelowo">David Oyelowo</string>
    <string name="leesa_kahn">Leesa Kahn</string>
    <string name="andrea_keir">Andrea Keir</string>
    <string name="marissa_kate_goodhill">Marissa Kate Goodhill</string>
    <string name="j_m_barrie">J. M. Barrie</string>
    <string name="angelina_jolie">Angelina Jolie</string>
    <string name="keira_chansa">Keira Chansa</string>
    <string name="jordan_a_nash">Jordan A. Nash</string>
    <string name="reece_yates">Reece Yates</string>
    <string name="anna_chancellor">Anna Chancellor</string>
    <string name="g_nero_drama_aventura_fantasia">Gênero: drama / aventura / fantasia</string>
    <string name="trailer3">trailer3</string>
    <string name="sobre_filme4">Em Além das Montanhas, acompanhamos o romance proibido de Anthony (Jamie Dornan) e Rosemary (Emily Blunt), membros de famílias rivais que estão disputando um território que separam as duas fazendas.</string>
    <string name="cristian_mungiu">Cristian Mungiu</string>
    <string name="anthony_bregman">Anthony Bregman</string>
    <string name="martina_niland">Martina Niland</string>
    <string name="jonathan_loughran">Jonathan Loughran</string>
    <string name="john_patrick_shanley">John Patrick Shanley</string>
    <string name="emily_blunt">Emily Blunt</string>
    <string name="jamie_dornan">Jamie Dornan</string>
    <string name="jon_hamm">Jon Hamm</string>
    <string name="christopher_walken">Christopher Walken</string>
    <string name="dearbhla_molloy">Dearbhla Molloy</string>
    <string name="g_nero_rom_nce">Gênero: românce</string>
    <string name="traile4">traile4</string>
    <string name="sobre_filme5">Em A Mão do Demônio, uma experiência traumática leva ao término de relacionamento de um jovem casal. Em uma tentativa desesperada de salvar seu casamento, Andrey (Semyon Serzin) procura a ajuda de uma mística chamada Mara (Aleksandra Revenko) para fazer sua esposa Olga (Marina Vasileva) esquecer o passado. A magia de Mara funciona, mas a segunda lua de mel logo se transforma em um pesadelo vivo quando ele precisa lidar com um mal poderoso que está possuindo sua esposa.</string>
    <string name="fede_alvarez">Fede Alvarez</string>
    <string name="bruce_campbell">Bruce Campbell</string>
    <string name="robert_tapert">Robert Tapert</string>
    <string name="sam_raimi">Sam Raimi</string>
    <string name="brent_hanley">Brent Hanley</string>
    <string name="bill_paxton">Bill Paxton</string>
    <string name="matthew_mcconaughey">Matthew McConaughey</string>
    <string name="matthew_o_leary">Matthew O\'Leary</string>
    <string name="powers_boothe">Powers Boothe</string>
    <string name="g_nero_terror_drama_suspense_suspense_psicol_gico_fic_o_policial">Gênero: terror / drama / suspense / suspense psicológico / ficção policial</string>
    <string name="trailer5">trailer5</string>
    <string name="sobre_filme6">Em 1946, Andy Dufresne (Tim Robbins), um jovem e bem sucedido banqueiro, tem a sua vida radicalmente modificada ao ser condenado por um crime que nunca cometeu, o homicídio de sua esposa e do amante dela. Ele é mandado para uma prisão que é o pesadelo de qualquer detento, a Penitenciária Estadual de Shawshank, no Maine. Lá ele irá cumprir a pena perpétua. Andy logo será apresentado a Warden Norton (Bob Gunton), o corrupto e cruel agente penitenciário, que usa a Bíblia como arma de controle e ao Capitão Byron Hadley (Clancy Brown) que trata os internos como animais. Andy faz amizade com Ellis Boyd Redding (Morgan Freeman), um prisioneiro que cumpre pena há 20 anos e controla o mercado negro da instituição.</string>
    <string name="niki_marvin">Niki Marvin</string>
    <string name="stephen_king">Stephen King</string>
    <string name="frank_darabont">Frank Darabont</string>
    <string name="morgan_freeman">Morgan Freeman</string>
    <string name="tim_robbins">Tim Robbins</string>
    <string name="bob_gunton">Bob Gunton</string>
    <string name="william_sadler">William Sadler</string>
    <string name="genero_filme6">Gênero: prisão / drama / ficção policial</string>
    <string name="traile6">traile6</string>
    <string name="sobre_filme7">Com a ajuda de Jim Gordon e Harvey Dent, Batman tem mantido a ordem na cidade de Gotham. Mas um jovem e anárquico criminoso conhecido como Coringa ganha força e decide instaurar um verdadeiro caos na cidade. O justiceiro será testado psicologicamente e fisicamente como nunca fora antes em um confronto bastante pessoal. Cabe a Batman encontrar uma maneira de deter o sádico vilão antes que mais vidas sejam perdidas.</string>
    <string name="christopher_nolan">Christopher Nolan</string>
    <string name="david_s_goyer">David S. Goyer</string>
    <string name="jonathan_nolan">Jonathan Nolan</string>
    <string name="christian_bale">Christian Bale</string>
    <string name="heath_ledger">Heath Ledger</string>
    <string name="gary_oldman">Gary Oldman</string>
    <string name="michael_caine">Michael Caine</string>
    <string name="cillian_murphy">Cillian Murphy</string>
    <string name="genero_filme7">Gênero: ação / super-herói / crime / aventura / suspense / mistério / drama / noir</string>
    <string name="trailer7">trailer7</string>
    <string name="sobre_filme8">O confronto final entre as forças do bem e do mal que lutam pelo controle do futuro da Terra Média se aproxima. Sauron planeja um grande ataque a Minas Tirith, capital de Gondor, o que faz com que Gandalf e Pippin partam para o local na intenção de ajudar a resistência. Um exército é reunido por Theoden em Rohan, em mais uma tentativa de deter as forças de Sauron. Enquanto isso, Frodo, Sam e Gollum seguem sua viagem rumo à Montanha da Perdição para destruir o anel.</string>
    <string name="peter_jackson">Peter Jackson</string>
    <string name="barrie_m_osborne">Barrie M. Osborne</string>
    <string name="fran_walsh">Fran Walsh</string>
    <string name="philippa_boyens">Philippa Boyens</string>
    <string name="elijah_wood">Elijah Wood</string>
    <string name="mande_uma_sugest_o">Mande uma sugestão</string>
    <string name="gravar">Gravar</string>
    <string name="limpar">Limpar</string>
    <string name="recuperar">Recuperar</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="digite_seu_username">Digite seu UserName:</string>
    <string name="entrar">entrar</string>
    <string name="digite_sua_senha">Digite sua senha:</string>
</resources>