<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Cad">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="256dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/nome"
        android:hintTextColor="#757575"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#A1A0A0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:hintTextColor="#757575"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="374dp"
        android:layout_height="87dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/homemade_apple"
        android:text="@string/mande_uma_sugest_o"
        android:textColor="#F33A3A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnGravar"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:text="@string/gravar"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:text="@string/limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:text="@string/recuperar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>