<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:rotationX="360"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/view_main"
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:contentDescription="@string/caixa_informacao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/layout_entrada" />

    <TextView
        android:id="@+id/text_main"
        android:layout_width="332dp"
        android:layout_height="64dp"
        android:fontFamily="@font/cabin"
        android:text="@string/text_main"
        android:textColor="#3C3838"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_main"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/bt_primeiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/bt_primeiro"
        android:textColor="#FFFFFF"
        app:backgroundTint="#D61616"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
                android:id="@+id/logo_pipoca"
                android:layout_width="217dp"
                android:layout_height="137dp"
                android:layout_marginTop="92dp"
                android:contentDescription="@string/logo_pipoca"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/filme" />

            <ImageView
                android:id="@+id/nome_logo"
                android:layout_width="310dp"
                android:layout_height="271dp"
                android:layout_marginTop="132dp"
                android:contentDescription="@string/cinexplain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/nome_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>