<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".TelaPrincipal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="58dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/menu2" />

            <ImageView
                android:id="@+id/filme_1"
                android:layout_width="203dp"
                android:layout_height="200dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="270dp"
                android:layout_marginRight="270dp"
                android:contentDescription="@string/imagem_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/filme_avatar" />

            <TextView
                android:id="@+id/txt_filme1"
                android:layout_width="222dp"
                android:layout_height="206dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text="@string/sobre_avatar"
                android:textAlignment="center"
                android:textColor="#BFBFBF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.387"
                app:layout_constraintStart_toEndOf="@+id/filme_1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_filme1"
                android:layout_width="387dp"
                android:layout_height="42dp"
                android:layout_marginBottom="25dp"
                android:text="@string/ver_sobre_o_filme"
                android:textColor="#BAB7B7"
                app:backgroundTint="#262626"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.406" />

            <ImageView
                android:id="@+id/img_melhores_lancamentos"
                android:layout_width="29dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/imagem_lancamento"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.475"
                app:srcCompat="@drawable/estrela" />

            <TextView
                android:id="@+id/txt_melhores_lancamentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ultimos_lancamentos"
                android:textColor="#BFBFBF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.467" />

            <HorizontalScrollView
                android:layout_width="409dp"
                android:layout_height="206dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_melhores_lancamentos">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/filme2"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/filme_invocacao_do_mal" />

                    <ImageView
                        android:id="@+id/filme3"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme3"
                        app:layout_constraintStart_toEndOf="@id/filme2"
                        app:layout_constraintTop_toTopOf="@id/filme2"
                        app:srcCompat="@drawable/filme3" />

                    <ImageView
                        android:id="@+id/filme4"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme4"
                        app:layout_constraintStart_toEndOf="@id/filme3"
                        app:layout_constraintTop_toTopOf="@id/filme3"
                        app:srcCompat="@drawable/filme4" />

                    <ImageView
                        android:id="@+id/filme5"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme5"
                        app:layout_constraintStart_toEndOf="@id/filme4"
                        app:layout_constraintTop_toTopOf="@id/filme4"
                        app:srcCompat="@drawable/filme5" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/img_coracao"
                android:layout_width="29dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="455dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/img_coracao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.475"
                app:srcCompat="@drawable/coracao" />

            <TextView
                android:id="@+id/melhores_avaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="455dp"
                android:layout_marginBottom="20dp"
                android:text="@string/melhores_avaliacoes"
                android:textColor="#BFBFBF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.467" />

            <HorizontalScrollView
                android:layout_width="409dp"
                android:layout_height="206dp"
                android:layout_marginTop="245dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_melhores_lancamentos">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/filme6"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/filme6" />

                    <ImageView
                        android:id="@+id/filme7"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme7"
                        app:layout_constraintStart_toEndOf="@id/filme6"
                        app:layout_constraintTop_toTopOf="@id/filme6"
                        app:srcCompat="@drawable/filme7" />

                    <ImageView
                        android:id="@+id/filme8"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme8"
                        app:layout_constraintStart_toEndOf="@id/filme7"
                        app:layout_constraintTop_toTopOf="@id/filme7"
                        app:srcCompat="@drawable/filme8" />

                    <ImageView
                        android:id="@+id/filme9"
                        android:layout_width="140dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="12dp"
                        android:contentDescription="@string/filme9"
                        app:layout_constraintStart_toEndOf="@id/filme8"
                        app:layout_constraintTop_toTopOf="@id/filme8"
                        app:srcCompat="@drawable/filme9" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <SearchView
                android:id="@+id/busca"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:background="#FFFFFF"
                android:inputType="textShortMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.846"
                app:layout_constraintStart_toEndOf="@+id/img_menu"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>